Load Message list according to the user

--- a/server/public/chat-page/chat-page.css
+++ b/server/public/chat-page/chat-page.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: "border-box";
+}
+
+body {
+    font-family: system-ui;
+    background:  rgb(11, 32, 39);
+    color: white;
+    text-align: center;
+  }
+
 .chat-page{
     display: flex;
     background-color: azure;
@@ -7,10 +18,97 @@
 .user{
     border: 2px solid;
     border-color: black;
+    display: flex;
+
 }
 
 .chat-content{
     border: 2px solid;
     background-color: aqua;
     padding: 2px;
+}
+
+.userItem {
+    display: flex;
+    align-items: center;
+    padding: 0.2rem;
+    margin-top: 0.1rem;
+}
+.userItem.active {
+    background-color: rgba(0, 0, 255, 0.336);
+}
+
+.status {
+    border-style: solid;
+    border-radius: 50%;
+    border-color: gray;
+    width: 0.15rem;
+    height: 0.15rem;
+    margin-right: 0.3rem;
+}
+
+.status.active {
+    border-color: orangered;
+}
+
+.container {
+    display: flex;
+    height: 90vh;
+}
+
+.sidebar {
+    flex: 1;
+}
+
+.chat-board{
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 0 5rem 0 5rem;
+}
+
+.chat-panel {
+    height: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.chat-input-box{
+    height: 3rem;
+    display: flex;
+    gap: 1rem;
+}
+
+.chat-input-text {
+    width: 100%;
+    background: dimgrey;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+.btn-send {
+    height: 100%;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+
+.msg-box {
+    display: flex;
+    margin-bottom: 0.3rem;
+}
+
+.msg-box.msg-right{
+    flex-direction:row-reverse;
+}
+
+.msg-box.msg-left{
+    flex-direction:row;
+}
+
+.text-box {
+    background: darkgrey;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
